# crc-and-tnm

./: .gitignore  README.md  files.md  license.txt  pyproject.toml  requirements.txt  setup.py
examples/: run_tnm.ipynb  run_tnm.py
labeller/: labeller_crc.R  labeller_tnm.R
notebooks/: select_reports_for_labelling_set1.ipynb  select_reports_for_labelling_set2_OxFuture.ipynb
runs/tnm_paper_20250703/: check_date_ranges.py
runs/tnm_paper_20250703/crc/: 20240817_crc_evaluation_rerun.py  20250707_crc_check_all_labels_and_fix_genetest.py  20250715_crc_evaluation_rerun-with-correct-genetest.py
runs/tnm_paper_20250703/tnm/: 20240214_tnm_evaluation_set2.py  20241004_tnm_evaluation_set1_part3.py  20241004_tnm_evaluation_set2_fixnocrc.py  20250716_tnm_check_all_labels.py
tests/: check_reports_negation.py  test_cli.py  test_perineural.py  test_recurrence.py  test_reports.py  test_reports_par.py  test_tnm_clean.py  test_tnm_evaluate.py  test_tnm_extract.py  test_tnm_pattern.py  test_tnm_tnm.py  test_utils.py
tests/test_cli/: reports.csv
tests/test_evaluate/: tnm.csv
textmining/: cli.py  constants.py  evaluate.py  perineural.py  reports.py  reports_20230206.py  reports_20230206_negbugfix.py  spelling.py  utils.py
textmining/tnm/: clean.py  extract.py  pattern.py  tnm.py
textmining/vocab/: NIHR-HIC_Colorectal-Cancer_imaging-types.xlsx  context.csv  context_20230206.csv  context_tnm.csv  rules_tnm.csv  spellcheck.csv  vocab_site_and_tumour.csv  vocab_site_and_tumour_20230206.csv
